re PR fortran/50684 (Incorrect error for move_alloc on element inside intent(in) pointer)

2011-12-03  Tobias Burnus  <burnus@net-b.de>

        PR fortran/50684
        * check.c (variable_check): Fix intent(in) check.

2011-12-03  Tobias Burnus  <burnus@net-b.de>

        PR fortran/50684
        * gfortran.dg/move_alloc_8.f90: New.

From-SVN: r181969